--- a/templates/base.html
+++ b/templates/base.html
@@ -59,7 +59,9 @@
         </div>
     </footer>
 
+    <script src="https://cdn.jsdelivr.net/npm/fuse.js@6.6.2"></script>
     <script src="/static/js/app.js?v={{ commit_hash }}"></script>
+    <script src="/static/js/moves-autocomplete.js?v={{ commit_hash }}"></script>
 </body>
 
 </html>
